--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.0.1",
     "@reduxjs/toolkit": "^1.9.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
